Frontpage: Fixed overflow in mobile mode

--- a/assets/css/4-pages/_frontpage.sass
+++ b/assets/css/4-pages/_frontpage.sass
@@ -27,7 +27,7 @@
       align-self: center
       flex: 1 auto
       margin: 20px
-      margin-right: 10px
+      margin-right: 5px
       max-height: 250px
 
   .hero-text
@@ -40,7 +40,7 @@
       flex: 1 100%
 
     h1
-      font-size: 50px
+      font-size: 35px
       font-weight: bold
       margin-top: 30px
 
@@ -50,7 +50,7 @@
         padding-right: 20px
 
     h2
-      font-size: 40px
+      font-size: 30px
       margin-bottom: 15px
 
       +media($large-screen)
